<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:style="http://schemas.android.com/tools">
    <item
        android:id="@+id/app_bar_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"

         />
    <item
        android:id="@+id/app_bar_note"
        android:icon="@drawable/ic_note"
        android:title="@string/note"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_list"
        android:icon="@drawable/ic_list"
        android:title="@string/list"

        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_sub"
        android:icon="@drawable/ic_sub"
        android:title="@string/sub"

        app:showAsAction="always"/>
        <!--tools:ignore="AppCompatResource" />-->

</menu>
