<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.AddDialogFragment"
        android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make"
        android:textColor="#AE9F1C"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:id="@+id/filter_group"
        >

        <RadioButton
            android:id="@+id/note_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/note"
            android:textColor="#0C29CA"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/list_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/list"
            android:textColor="#CD0B0B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/sub_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/subscription"
            android:textColor="#079F0E"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RadioGroup>

</LinearLayout>