<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#A6EDE5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/rvNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="#B91C1B1B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rvNoteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="#B91C1B1B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rvCreatedOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datePicker"
            android:textColor="#B91C1B1B"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>