<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/rvNoteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/note"
            android:textColor="#B91C1B1B"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- This is the actual mandatory library attributes that must be used -->
        <com.ms.square.android.expandabletextview.ExpandableTextView

            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rvNoteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rvNoteTitle"
            android:layout_margin="5dp"
            android:text="@string/description"
            android:textStyle="italic"
            android:textColor="#B91C1B1B"
            android:textSize="15sp"
            expandableTextView:animDuration="200"
            expandableTextView:maxCollapsedLines="3">

            <TextView
                android:id="@+id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/description"
                android:textColor="#B91C1B1B"
                android:textSize="15sp"
                android:textStyle="italic" />

            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:background="@android:color/transparent"
                android:padding="16dp" />

        </com.ms.square.android.expandabletextview.ExpandableTextView>

        <TextView
            android:id="@+id/rvCreatedOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/datePicker"
            android:textColor="#B91C1B1B"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="end"
            />

        <ImageView
            android:id="@+id/eyeview"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="end"
            android:src="@drawable/ic_edit_black_24dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>