<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDivider"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/colornote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" Reminders were never So Simple!! "
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            />

            <LinearLayout
                android:id="@+id/child_create_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_background"
                android:orientation="vertical"
                android:weightSum="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <EditText
                    android:id="@+id/noteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/side_margin"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginRight="@dimen/side_margin"
                    android:layout_weight="1"
                    android:autofillHints="@string/hint_title"
                    android:backgroundTint="@color/colorAccent"
                    android:ems="10"
                    android:hint="@string/hint_title"
                    android:inputType="text"
                    android:padding="@dimen/padding_medium"
                    android:textColorHint="#0B0707"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/noteDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/side_margin"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:autofillHints="@string/hint_note"
                    android:backgroundTint="@color/colorAccent"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/hint_note"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/padding_medium"
                    android:textColorHint="#0B0707"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@color/colornote"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_date_range_black_24dp"/>
                <TextView
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:autofillHints="@string/datePicker"
                    android:background="@drawable/round_background"
                    android:ems="10"
                    android:textStyle="italic|bold"
                    android:hint="@string/datePicker"
                    android:padding="@dimen/padding_medium"
                    android:textColorHint="#0B0707"
                    android:textSize="15sp" />
                </LinearLayout>
                <Button
                    android:id="@+id/addNote"
                    android:layout_marginTop="@dimen/margin_short"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:autofillHints="@string/add"
                    android:backgroundTint="@color/colornote"
                    android:gravity="center"
                    android:text="@string/addNote"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

