<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.activity.MainActivity">


    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        style="@style/Widget.MaterialComponents.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="#424242"
        app:fabAlignmentMode="end"
        app:fabCradleMargin="8dp"
        app:hideOnScroll="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="16">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="center"
                android:clickable="true"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/home_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:duplicateParentState="true"
                    android:src="@drawable/btn_background_home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textColor="@drawable/text_selector"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="center"
                android:clickable="true"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/note_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:padding="0dp"
                    android:src="@drawable/btn_background_note" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textColor="@drawable/text_selector"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/list_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:duplicateParentState="true"
                    android:src="@drawable/btn_background_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list"
                    android:textColor="@drawable/text_selector"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/subscription"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
              >

                <ImageView
                    android:id="@+id/subs_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:duplicateParentState="true"
                    android:src="@drawable/btn_background_subs" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub"
                    android:textColor="@drawable/text_selector"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@android:drawable/ic_input_add"
        app:fabSize="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        app:backgroundTint="@color/colorAccent"
        android:layout_marginBottom="25dp" />

    <include layout="@layout/minifab"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>








